--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,73 +1,12 @@
-.menu {
-  width: 90vw;
-  max-width: 1170px;
-  margin: 5rem auto;
-}
-.title {
-  text-align: center;
-  margin-bottom: 2rem;
-}
-.underline {
-  width: 5rem;
-  height: 0.25rem;
-  background: #c59d5f;
-  margin-left: auto;
-  margin-right: auto;
-}
-.btn-container {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 4rem;
-}
-.filter-btn {
-  background: transparent;
-  border-color: transparent;
-  font-size: 1rem;
-  text-transform: capitalize;
-  margin: 0 0.5rem;
-  letter-spacing: 0.1rem;
-  color: #c59d5f;
-  cursor: pointer;
-  padding: 0.375rem 0.75rem;
-  border-radius: 0.5rem;
-  transition: all 0.3s linear;
-}
-.filter-btn:hover {
-  background: #c59d5f;
-  color: #fff;
-}
-.section-center {
-  display: grid;
-  gap: 2rem;
-  justify-items: center;
-}
-.menu-item {
-  display: flex;
-  justify-content: space-between;
-  background: #fff;
-  padding: 1.5rem 2rem;
-  border-radius: 0.25rem;
-  border-bottom: 5px solid #c59d5f;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s linear;
-}
-.menu-item:hover {
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-}
-.photo {
-  width: 200px;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 0.25rem;
-  border: 4px solid #c59d5f;
-}
-.item-info {
-  text-align: left;
-  margin-left: 2rem;
-}
-.item-text {
-  margin-bottom: 0;
-  margin-top: 1rem;
-  line-height: 1.5;
-  color: #617d98;
+h1 {
+    color: #27aedb;
+    text-align: center;
+    }
+    
+
+button{
+    color: #27aedb;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
